--- a/component/pom.xml
+++ b/component/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.extension.siddhi.execution.graph</groupId>
         <artifactId>siddhi-execution-graph-parent</artifactId>
-        <version>4.0.3-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -66,8 +66,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -83,7 +83,7 @@
                         </Private-Package>
                         <Export-Package>
                             !org.apache.commons.lang3.*,
-                            org.wso2.extension.siddhi.execution.time.*
+                            org.wso2.extension.siddhi.execution.graph.*
                         </Export-Package>
                         <Import-Package>
                             *;resolution:=optional
