--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ google_analytics:
 pages:
 - Welcome to WSO2 Siddhi Execution Time: index.md
 - API Docs:
+  - 1.0.0-SNAPSHOT: api/1.0.0-SNAPSHOT.md
   - 4.0.2-SNAPSHOT: api/4.0.2-SNAPSHOT.md
+  - 4.0.3-SNAPSHOT: api/4.0.3-SNAPSHOT.md
 - License: license.md
 theme: material
