--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Siddhi-Execution-Time
+site_name: Siddhi-Execution-Graph
 extra_css:
 - stylesheets/extra.css
 extra_javascript:
@@ -13,10 +13,8 @@ google_analytics:
 - UA-103065-28
 - auto
 pages:
-- Welcome to WSO2 Siddhi Execution Time: index.md
+- Welcome to WSO2 Siddhi Execution Graph: index.md
 - API Docs:
-  - 1.0.0-SNAPSHOT: api/1.0.0-SNAPSHOT.md
-  - 4.0.2-SNAPSHOT: api/4.0.2-SNAPSHOT.md
-  - 4.0.3-SNAPSHOT: api/4.0.3-SNAPSHOT.md
+  - 4.0.4-SNAPSHOT: api/4.0.4-SNAPSHOT.md
 - License: license.md
 theme: material
