--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.wso2.extension.siddhi.execution.graph</groupId>
     <artifactId>siddhi-execution-graph-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>4.0.4-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>WSO2 Siddhi Execution Extension - Graph Aggregator Pom</name>
     <url>http://wso2.org</url>
@@ -45,17 +45,17 @@
     </profiles>
 
     <properties>
-        <siddhi.version>4.0.0-M78</siddhi.version>
+        <siddhi.version>4.0.0-M89</siddhi.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <log4j.version>1.2.17.wso2v1</log4j.version>
         <testng.version>6.8</testng.version>
-        <jacoco.maven.version>0.7.8</jacoco.maven.version>
+        <jacoco.version>0.7.8</jacoco.version>
     </properties>
 
     <scm>
-        <connection>scm:git:https://github.com/wso2-extensions/siddhi-execution-time.git</connection>
-        <url>https://github.com/wso2-extensions/siddhi-execution-time.git</url>
-        <developerConnection>scm:git:https://github.com/wso2-extensions/siddhi-execution-time.git
+        <connection>scm:git:https://github.com/wso2-extensions/siddhi-execution-graph.git</connection>
+        <url>https://github.com/wso2-extensions/siddhi-execution-graph.git</url>
+        <developerConnection>scm:git:https://github.com/wso2-extensions/siddhi-execution-graph.git
         </developerConnection>
         <tag>HEAD</tag>
     </scm>
@@ -136,7 +136,40 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${basedir}/target/coverage-reports/jacoco.exec</destFile>
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${basedir}/target/coverage-reports/jacoco.exec</dataFile>
+                            <outputDirectory>${basedir}/target/coverage-reports/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
+
+
     </build>
+
+
 
 </project>
